Added english translation to translationEn.json

--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -1,5 +1,5 @@
 {
-    "welcome": "Cześć Koronagaba",
+    "welcome": "Gotuj z Koro",
     "shopping_list": "Lista zakupów",
     "apple": "jabłko",
     "banana": "banan",
@@ -15,13 +15,13 @@
     "milk": "mleko",
     "muesli": "musli",
     "onion": "cebula",
-    "oranga": "pomarańcza",
+    "orange": "pomarańcza",
     "pasta": "makaron",
     "pear": "gruszka",
     "potato": "ziemniak",
-    "red been": "czerwona fasola",
+    "red bean": "czerwona fasola",
     "rise": "ryż",
     "sugar": "cukier",
     "tomato": "pomidor",
-    "yoghurt": "jogurt"
+    "yogurt": "jogurt"
 }
