--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -1,4 +1,27 @@
    {
-        "welcome": "Hi Koronagaba",
-        "shopping_list": "Shopping list"
+        "welcome": "Let's cook with Koro",
+        "shopping_list": "Shopping list",
+        "apple": "apple",
+        "banana": "banana",
+        "bread": "bread",
+        "butter": "butter",
+        "chocolate cookie": "chocolate cookie",
+        "cottage cheese": "cottage cheese",
+        "cucumber": "cucumber",
+        "eggs": "eggs",
+        "feta": "feta",
+        "kiwi": "kiwi",
+        "margarine": "margarine",
+        "milk": "milk",
+        "muesli": "muesli",
+        "onion": "onion",
+        "orange": "orange",
+        "pasta": "pasta",
+        "pear": "pear",
+        "potato": "potato",
+        "red bean": "red bean",
+        "rise": "rise",
+        "sugar": "sugar",
+        "tomato": "tomato",
+        "yogurt": "yogurt"
     }
