Change translations from TranslationContext to useTranslation

--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -1,6 +1,34 @@
 {
     "welcome": "Gotuj z Koro",
+    "create_new_product": "Utwórz nowy produkt",
+    "new_product_name": "Nazwa",
+    "new_product_amount": "Ilość",
+    "new_product_submit": "Zatwierdź",
+    "alert_product_exist": "Produkt o takiej nazwie już istnieje",
+    "cook": "Gotuj",
+    "stock": "Magazyn",
+    "create": "Utwórz",
     "shopping_list": "Lista zakupów",
+    "search": "Wyszukaj...",
+    "breakfast": "Śniadanie",
+    "lunch": "Obiad",
+    "supper": "Kolacja",
+    "snacks": "Przekąski",
+    "add_to_cart": "Dodaj do listy",
+    "shopping_completed": "Zakupy ukończone",
+    "ask_shopping_completed": "Jesteś pewien że kupiłeś poniższe produkty?",
+    "yes": "Tak",
+    "cancel": "Anuluj",
+    "empty_shopping_list": "Twoja lista zakupów jest pusta",
+    "empty_shopping_list_alt": "Pusta Lista zakupów",
+    "required_amount": "Wymagana ilość",
+    "bought": "Kupiłem",
+    "approve_changes": "Zatwierdź zmiany",
+    "arrow_back": "strzałka cofająca",
+    "add_more": "Dodaj więcej",
+    "add": "Dodaj",
+    "meal_list_empty": "lista jest pusta.",
+    "add_ingredients": "Dodaj składnik posiłku:",
     "apple": "jabłko",
     "banana": "banan",
     "bread": "chleb",
