--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -13,7 +13,7 @@
     "breakfast": "Breakfast",
     "lunch": "Lunch",
     "supper": "Supper",
-    "snack": "Snack",
+    "snacks": "Snacks",
     "add_to_cart": "Add to cart",
     "shopping_completed": "Shopping completed",
     "ask_shopping_completed": "Are You sure you bought the following products?",
@@ -27,8 +27,10 @@
     "arrow_back": "arrow back",
     "add_more": "Add more",
     "add": "Add",
-    "meal_list_empty": "list is empty.",
+    "meal_list_empty": "is empty.",
     "add_ingredients": "Add ingredients of",
+    "list": "List",
+    "snack": "snack",
     "apple": "apple",
     "banana": "banana",
     "bread": "bread",
