--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -27,8 +27,10 @@
     "arrow_back": "strzałka cofająca",
     "add_more": "Dodaj więcej",
     "add": "Dodaj",
-    "meal_list_empty": "lista jest pusta.",
+    "meal_list_empty": "jest pusta.",
     "add_ingredients": "Dodaj składnik posiłku:",
+    "list": "Lista",
+    "snack": "przekąski",
     "apple": "jabłko",
     "banana": "banan",
     "bread": "chleb",
