Styled not activated img 'TypesOfCooking'

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -31,6 +31,7 @@
     "add_ingredients": "Add ingredients of",
     "list": "List",
     "snack": "snack",
+    "alert_not_activated": "This functionality will be activated soon",
     "apple": "apple",
     "banana": "banana",
     "bread": "bread",
