--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -31,6 +31,7 @@
     "add_ingredients": "Dodaj składnik posiłku:",
     "list": "Lista",
     "snack": "przekąski",
+    "alert_not_activated": "Ta funkcjonalność wkrótce zostanie aktywowana",
     "apple": "jabłko",
     "banana": "banan",
     "bread": "chleb",
