--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -21,7 +21,7 @@
     "cancel": "Anuluj",
     "empty_shopping_list": "Twoja lista zakupów jest pusta",
     "empty_shopping_list_alt": "Pusta Lista zakupów",
-    "required_amount": "Wymagana ilość",
+    "required_amount": "Wymagana ilość: ",
     "bought": "Kupiłem",
     "approve_changes": "Zatwierdź zmiany",
     "arrow_back": "strzałka cofająca",
