Serch function ingredients to add in Single meal component

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -27,6 +27,7 @@
     "arrow_back": "arrow back",
     "add_more": "Add more",
     "add": "Add",
+    "add_small": "add",
     "meal_list_empty": "is empty.",
     "add_ingredients": "Add ingredients of",
     "list": "List",
