--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -27,6 +27,7 @@
     "arrow_back": "strzałka cofająca",
     "add_more": "Dodaj więcej",
     "add": "Dodaj",
+    "add_small": "dodaj",
     "meal_list_empty": "jest pusta.",
     "add_ingredients": "Dodaj składnik posiłku:",
     "list": "Lista",
