Nesting translation json's files

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -33,27 +33,29 @@
     "list": "List",
     "snack": "snack",
     "alert_not_activated": "This functionality will be activated soon",
-    "apple": "apple",
-    "banana": "banana",
-    "bread": "bread",
-    "butter": "butter",
-    "chocolate cookie": "chocolate cookie",
-    "cottage cheese": "cottage cheese",
-    "cucumber": "cucumber",
-    "eggs": "eggs",
-    "feta": "feta",
-    "kiwi": "kiwi",
-    "margarine": "margarine",
-    "milk": "milk",
-    "muesli": "muesli",
-    "onion": "onion",
-    "orange": "orange",
-    "pasta": "pasta",
-    "pear": "pear",
-    "potato": "potato",
-    "red bean": "red bean",
-    "rise": "rise",
-    "sugar": "sugar",
-    "tomato": "tomato",
-    "yogurt": "yogurt"
+    "key_ingredients": {
+        "apple": "apple",
+        "banana": "banana",
+        "bread": "bread",
+        "butter": "butter",
+        "chocolate cookie": "chocolate cookie",
+        "cottage cheese": "cottage cheese",
+        "cucumber": "cucumber",
+        "eggs": "eggs",
+        "feta": "feta",
+        "kiwi": "kiwi",
+        "margarine": "margarine",
+        "milk": "milk",
+        "muesli": "muesli",
+        "onion": "onion",
+        "orange": "orange",
+        "pasta": "pasta",
+        "pear": "pear",
+        "potato": "potato",
+        "red bean": "red bean",
+        "rise": "rise",
+        "sugar": "sugar",
+        "tomato": "tomato",
+        "yogurt": "yogurt"
+    }
 }
