--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -33,27 +33,30 @@
     "list": "Lista",
     "snack": "przekąski",
     "alert_not_activated": "Ta funkcjonalność wkrótce zostanie aktywowana",
-    "apple": "jabłko",
-    "banana": "banan",
-    "bread": "chleb",
-    "butter": "masło",
-    "chocolate cookie": "ciastka czekoladowe",
-    "cottage cheese": "serek wiejski",
-    "cucumber": "ogórek",
-    "eggs": "jajka",
-    "feta": "feta",
-    "kiwi": "kiwi",
-    "margarine": "margaryna",
-    "milk": "mleko",
-    "muesli": "musli",
-    "onion": "cebula",
-    "orange": "pomarańcza",
-    "pasta": "makaron",
-    "pear": "gruszka",
-    "potato": "ziemniak",
-    "red bean": "czerwona fasola",
-    "rise": "ryż",
-    "sugar": "cukier",
-    "tomato": "pomidor",
-    "yogurt": "jogurt"
+    "key_ingredients": {
+        "apple": "jabłko",
+        "banana": "banan",
+        "bread": "chleb",
+        "butter": "masło",
+        "chocolate cookie": "ciastka czekoladowe",
+        "cottage cheese": "serek wiejski",
+        "cucumber": "ogórek",
+        "eggs": "jajka",
+        "feta": "feta",
+        "kiwi": "kiwi",
+        "margarine": "margaryna",
+        "milk": "mleko",
+        "muesli": "musli",
+        "onion": "cebula",
+        "orange": "pomarańcza",
+        "pasta": "makaron",
+        "pear": "gruszka",
+        "potato": "ziemniak",
+        "red bean": "czerwona fasola",
+        "rise": "ryż",
+        "sugar": "cukier",
+        "tomato": "pomidor",
+        "yogurt": "jogurt"
+    }
+   
 }
