--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -33,6 +33,7 @@
     "list": "List",
     "snack": "snack",
     "alert_not_activated": "This functionality will be activated soon",
+    "alert_not_enough": "There are not enough products in stock",
     "key_ingredients": {
         "apple": "apple",
         "banana": "banana",
