--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -35,6 +35,7 @@
     "alert_not_activated": "This functionality will be activated soon",
     "alert_not_enough": "There are not enough products in stock",
     "delete_everything": "Delete Everything",
+    "save": "Save",
     "key_ingredients": {
         "apple": "apple",
         "banana": "banana",
