--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -35,6 +35,7 @@
     "alert_not_activated": "Ta funkcjonalność wkrótce zostanie aktywowana",
     "alert_not_enough": "Niewystarczająca ilość produktu w magazynie",
     "delete_everything": "Usuń wszystko",
+    "save": "Usuń",
     "key_ingredients": {
         "apple": "jabłko",
         "banana": "banan",
