Added Delete modal that appear when remove product from shopping list

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -1,64 +1,66 @@
 {
-    "welcome": "Let's cook with Koro",
-    "create_new_product": "Create new product",
-    "new_product_name": "Name",
-    "new_product_amount": "Amount",
-    "new_product_submit": "Submit",
-    "alert_product_exist": "This product is already exist",
-    "cook": "Cook",
-    "stock": "Stock",
-    "create": "Create",
-    "shopping_list": "Shopping list",
-    "search": "Search...",
-    "breakfast": "Breakfast",
-    "lunch": "Lunch",
-    "supper": "Supper",
-    "snacks": "Snacks",
-    "add_to_cart": "Add to cart",
-    "shopping_completed": "Shopping completed",
-    "ask_shopping_completed": "Are You sure you bought the following products?",
-    "yes": "Yes",
-    "cancel": "Cancel",
-    "empty_shopping_list": "Your shopping list is empty.",
-    "empty_shopping_list_alt": "Empty shoppping list",
-    "required_amount": "Required amount: ",
-    "bought": "I bought",
-    "approve_changes": "Approve the changes",
-    "arrow_back": "arrow back",
-    "add_more": "Add more",
-    "add": "Add",
-    "add_small": "add",
-    "meal_list_empty": "is empty.",
-    "add_ingredients": "Add ingredients of",
-    "list": "List",
-    "snack": "snack",
-    "alert_not_activated": "This functionality will be activated soon",
-    "alert_not_enough": "There are not enough products in stock",
-    "delete_everything": "Delete Everything",
-    "save": "Save",
-    "key_ingredients": {
-        "apple": "apple",
-        "banana": "banana",
-        "bread": "bread",
-        "butter": "butter",
-        "chocolate cookie": "chocolate cookie",
-        "cottage cheese": "cottage cheese",
-        "cucumber": "cucumber",
-        "eggs": "eggs",
-        "feta": "feta",
-        "kiwi": "kiwi",
-        "margarine": "margarine",
-        "milk": "milk",
-        "muesli": "muesli",
-        "onion": "onion",
-        "orange": "orange",
-        "pasta": "pasta",
-        "pear": "pear",
-        "potato": "potato",
-        "red bean": "red bean",
-        "rise": "rise",
-        "sugar": "sugar",
-        "tomato": "tomato",
-        "yogurt": "yogurt"
-    }
+  "welcome": "Let's cook with Koro",
+  "create_new_product": "Create new product",
+  "new_product_name": "Name",
+  "new_product_amount": "Amount",
+  "new_product_submit": "Submit",
+  "alert_product_exist": "This product is already exist",
+  "cook": "Cook",
+  "stock": "Stock",
+  "create": "Create",
+  "shopping_list": "Shopping list",
+  "search": "Search...",
+  "breakfast": "Breakfast",
+  "lunch": "Lunch",
+  "supper": "Supper",
+  "snacks": "Snacks",
+  "add_to_cart": "Add to cart",
+  "shopping_completed": "Shopping completed",
+  "ask_shopping_completed": "Are You sure you bought the following products?",
+  "yes": "Yes",
+  "no": "No",
+  "cancel": "Cancel",
+  "empty_shopping_list": "Your shopping list is empty.",
+  "empty_shopping_list_alt": "Empty shoppping list",
+  "required_amount": "Required amount: ",
+  "bought": "I bought",
+  "approve_changes": "Approve the changes",
+  "arrow_back": "arrow back",
+  "add_more": "Add more",
+  "add": "Add",
+  "add_small": "add",
+  "meal_list_empty": "is empty.",
+  "add_ingredients": "Add ingredients of",
+  "list": "List",
+  "snack": "snack",
+  "alert_not_activated": "This functionality will be activated soon",
+  "alert_not_enough": "There are not enough products in stock",
+  "delete_everything": "Delete Everything",
+  "are_you_sure_to_remove?": "Are you sure you want to remove this product from your shopping list?",
+  "save": "Save",
+  "key_ingredients": {
+    "apple": "apple",
+    "banana": "banana",
+    "bread": "bread",
+    "butter": "butter",
+    "chocolate cookie": "chocolate cookie",
+    "cottage cheese": "cottage cheese",
+    "cucumber": "cucumber",
+    "eggs": "eggs",
+    "feta": "feta",
+    "kiwi": "kiwi",
+    "margarine": "margarine",
+    "milk": "milk",
+    "muesli": "muesli",
+    "onion": "onion",
+    "orange": "orange",
+    "pasta": "pasta",
+    "pear": "pear",
+    "potato": "potato",
+    "red bean": "red bean",
+    "rise": "rise",
+    "sugar": "sugar",
+    "tomato": "tomato",
+    "yogurt": "yogurt"
+  }
 }
