Complete App translation

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -10,10 +10,6 @@
   "create": "Create",
   "shopping_list": "Shopping list",
   "search": "Search...",
-  "breakfast": "Breakfast",
-  "lunch": "Lunch",
-  "supper": "Supper",
-  "snacks": "Snacks",
   "add_to_cart": "Add to cart",
   "shopping_completed": "Shopping completed",
   "ask_shopping_completed": "Are You sure you bought the following products?",
@@ -32,12 +28,22 @@
   "meal_list_empty": "is empty.",
   "add_ingredients": "Add ingredients of",
   "list": "List",
-  "snack": "snack",
   "alert_not_activated": "This functionality will be activated soon",
   "alert_not_enough": "There are not enough products in stock",
   "delete_everything": "Delete Everything",
   "are_you_sure_to_remove?": "Are you sure you want to remove this product from your shopping list?",
-  "save": "Save",
+  "Save": "Save",
+  "month": "Month",
+  "year": "Year",
+  "clear": "Clear",
+  "total_amount": "Total amount",
+  "key_name_of_meal": {
+    "breakfast": "Breakfast",
+    "lunch": "Lunch",
+    "supper": "Supper",
+    "snacks": "Snacks",
+    "snack": "snack"
+  },
   "key_ingredients": {
     "apple": "apple",
     "banana": "banana",
