--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -1,67 +1,71 @@
 {
-    "welcome": "Gotuj z Koro",
-    "create_new_product": "Utwórz nowy produkt",
-    "new_product_name": "Nazwa",
-    "new_product_amount": "Ilość",
-    "new_product_submit": "Zatwierdź",
-    "alert_product_exist": "Produkt o takiej nazwie już istnieje",
-    "cook": "Gotuj",
-    "stock": "Magazyn",
-    "create": "Utwórz",
-    "shopping_list": "Lista zakupów",
-    "search": "Wyszukaj...",
+  "welcome": "Gotuj z Koro",
+  "create_new_product": "Utwórz nowy produkt",
+  "new_product_name": "Nazwa",
+  "new_product_amount": "Ilość",
+  "new_product_submit": "Zatwierdź",
+  "alert_product_exist": "Produkt o takiej nazwie już istnieje",
+  "cook": "Gotuj",
+  "stock": "Magazyn",
+  "create": "Utwórz",
+  "shopping_list": "Lista zakupów",
+  "search": "Wyszukaj...",
+  "add_to_cart": "Dodaj do listy",
+  "shopping_completed": "Zakupy ukończone",
+  "ask_shopping_completed": "Jesteś pewien że kupiłeś poniższe produkty?",
+  "yes": "Tak",
+  "no": "Nie",
+  "cancel": "Anuluj",
+  "empty_shopping_list": "Twoja lista zakupów jest pusta",
+  "empty_shopping_list_alt": "Pusta Lista zakupów",
+  "required_amount": "Wymagana ilość: ",
+  "bought": "Kupiłem",
+  "approve_changes": "Zatwierdź zmiany",
+  "arrow_back": "strzałka cofająca",
+  "add_more": "Dodaj więcej",
+  "add": "Dodaj",
+  "add_small": "dodaj",
+  "meal_list_empty": "jest pusta.",
+  "add_ingredients": "Dodaj składnik posiłku:",
+  "list": "Lista",
+  "alert_not_activated": "Ta funkcjonalność wkrótce zostanie aktywowana",
+  "alert_not_enough": "Niewystarczająca ilość produktu w magazynie",
+  "delete_everything": "Usuń wszystko",
+  "are_you_sure_to_remove?": "Czy na pewno chcesz usunąć ten produkt z listy zakupów?",
+  "Save": "Zapisz",
+  "month": "Miesiąc",
+  "year": "Rok",
+  "clear": "Wyczyść",
+  "key_name_of_meal": {
     "breakfast": "Śniadanie",
     "lunch": "Obiad",
     "supper": "Kolacja",
     "snacks": "Przekąski",
-    "add_to_cart": "Dodaj do listy",
-    "shopping_completed": "Zakupy ukończone",
-    "ask_shopping_completed": "Jesteś pewien że kupiłeś poniższe produkty?",
-    "yes": "Tak",
-    "no": "Nie",
-    "cancel": "Anuluj",
-    "empty_shopping_list": "Twoja lista zakupów jest pusta",
-    "empty_shopping_list_alt": "Pusta Lista zakupów",
-    "required_amount": "Wymagana ilość: ",
-    "bought": "Kupiłem",
-    "approve_changes": "Zatwierdź zmiany",
-    "arrow_back": "strzałka cofająca",
-    "add_more": "Dodaj więcej",
-    "add": "Dodaj",
-    "add_small": "dodaj",
-    "meal_list_empty": "jest pusta.",
-    "add_ingredients": "Dodaj składnik posiłku:",
-    "list": "Lista",
-    "snack": "przekąski",
-    "alert_not_activated": "Ta funkcjonalność wkrótce zostanie aktywowana",
-    "alert_not_enough": "Niewystarczająca ilość produktu w magazynie",
-    "delete_everything": "Usuń wszystko",
-    "are_you_sure_to_remove?": "Czy na pewno chcesz usunąć ten produkt z listy zakupów?",
-    "save": "Usuń",
-    "key_ingredients": {
-        "apple": "jabłko",
-        "banana": "banan",
-        "bread": "chleb",
-        "butter": "masło",
-        "chocolate cookie": "ciastka czekoladowe",
-        "cottage cheese": "serek wiejski",
-        "cucumber": "ogórek",
-        "eggs": "jajka",
-        "feta": "feta",
-        "kiwi": "kiwi",
-        "margarine": "margaryna",
-        "milk": "mleko",
-        "muesli": "musli",
-        "onion": "cebula",
-        "orange": "pomarańcza",
-        "pasta": "makaron",
-        "pear": "gruszka",
-        "potato": "ziemniak",
-        "red bean": "czerwona fasola",
-        "rise": "ryż",
-        "sugar": "cukier",
-        "tomato": "pomidor",
-        "yogurt": "jogurt"
-    }
-   
+    "snack": "Przekąska"
+  },
+  "key_ingredients": {
+    "apple": "jabłko",
+    "banana": "banan",
+    "bread": "chleb",
+    "butter": "masło",
+    "chocolate cookie": "ciastka czekoladowe",
+    "cottage cheese": "serek wiejski",
+    "cucumber": "ogórek",
+    "eggs": "jajka",
+    "feta": "feta",
+    "kiwi": "kiwi",
+    "margarine": "margaryna",
+    "milk": "mleko",
+    "muesli": "musli",
+    "onion": "cebula",
+    "orange": "pomarańcza",
+    "pasta": "makaron",
+    "pear": "gruszka",
+    "potato": "ziemniak",
+    "red bean": "czerwona fasola",
+    "rise": "ryż",
+    "sugar": "cukier",
+    "tomato": "pomidor",
+    "yogurt": "jogurt"
+  }
 }
