Complete change of webiste layout

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -9,6 +9,7 @@
   "stock": "Stock",
   "create": "Create",
   "shopping_list": "Shopping list",
+  "history": "History",
   "search": "Search...",
   "add_to_cart": "Add to cart",
   "shopping_completed": "Shopping completed",
