--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -9,6 +9,7 @@
   "stock": "Magazyn",
   "create": "Utwórz",
   "shopping_list": "Lista zakupów",
+  "history": "Historia",
   "search": "Wyszukaj...",
   "add_to_cart": "Dodaj do listy",
   "shopping_completed": "Zakupy ukończone",
