New layout in 'Empty shopping list'

--- a/src/locales/en/translationEn.json
+++ b/src/locales/en/translationEn.json
@@ -12,12 +12,13 @@
   "history": "History",
   "search": "Search...",
   "add_to_cart": "Add to cart",
+  "add_products_to_shopping_list": "Add products to shopping list",
   "shopping_completed": "Shopping completed",
   "ask_shopping_completed": "Are You sure you bought the following products?",
   "yes": "Yes",
   "no": "No",
   "cancel": "Cancel",
-  "empty_shopping_list": "Your shopping list is empty.",
+  "empty_shopping_list": "Your shopping list is empty",
   "empty_shopping_list_alt": "Empty shoppping list",
   "required_amount": "Required amount: ",
   "bought": "I bought",
