--- a/src/locales/pl/translationPl.json
+++ b/src/locales/pl/translationPl.json
@@ -12,6 +12,7 @@
   "history": "Historia",
   "search": "Wyszukaj...",
   "add_to_cart": "Dodaj do listy",
+  "add_products_to_shopping_list": "Dodaj produkty do listy zakupów",
   "shopping_completed": "Zakupy ukończone",
   "ask_shopping_completed": "Jesteś pewien że kupiłeś poniższe produkty?",
   "yes": "Tak",
